--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - images/first.jpeg
+     - images/secound.jpeg
+     - images/third.jpeg
+     - images/fouth.jpeg
+     - images/fifth.jpeg
+     - images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
