story bar completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ flutter:
      - images/fouth.jpeg
      - images/fifth.jpeg
      - images/logo.png
+     - images/story.jpg
+     
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
