--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ flutter:
      - images/fifth.jpeg
      - images/logo.png
      - images/story.jpg
+     - images/1.jpeg
+     - images/2.jpeg
+     - images/3.jpeg
+     - images/4.jpg
+     - images/5.jpeg
      
 
   # An image asset can refer to one or more resolution-specific "variants", see
